Fixed learn more section h2 spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1236,7 +1236,7 @@ body {
 }
 
 .h2-spacing {
-  margin: 2rem;
+  margin-bottom: 2rem;
 }
 
 .five-years h2 {
